Refactor: Replace collect(Collectors.toList) with Stream.toList