@@ -9,7 +9,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -36,7 +35,8 @@ public class AdminService {
             seat.setCategory(seatDto.category());
             seat.setAvailable(true);
             return seat;
-        }).collect(Collectors.toList());
+        }).toList();
+
         seatRepository.saveAll(seatEntities);
 
         return savedEvent;
